WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172190
WebCore::leakCGColor() needs CF_RETURNS_RETAINED annotation
https://bugs.webkit.org/show_bug.cgi?id=172190
Summary
WebCore::leakCGColor() needs CF_RETURNS_RETAINED annotation
David Kilzer (:ddkilzer)
Reported
2017-05-16 14:36:14 PDT
Need the bug URL (OOPS!). Reviewed by NOBODY (OOPS!). * platform/graphics/cg/ColorCG.cpp: (WebCore::leakCGColor): Annotate with CF_RETURNS_RETAINED since it does not follow the CF naming convention, which means the expected behavior can't be inferred by the clang static analyzer. --- 2 files changed, 14 insertions(+), 1 deletion(-)
Attachments
Patch
(1.38 KB, patch)
2017-05-16 14:36 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2017-05-16 14:36:15 PDT
Created
attachment 310299
[details]
Patch
WebKit Commit Bot
Comment 2
2017-05-16 15:20:11 PDT
Comment on
attachment 310299
[details]
Patch Clearing flags on attachment: 310299 Committed
r216949
: <
http://trac.webkit.org/changeset/216949
>
WebKit Commit Bot
Comment 3
2017-05-16 15:20:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug