WebCore::leakCGColor() needs CF_RETURNS_RETAINED annotation <https://webkit.org/b/172190>

Reviewed by Simon Fraser.

* platform/graphics/cg/ColorCG.cpp:
(WebCore::leakCGColor): Annotate with CF_RETURNS_RETAINED since
it does not follow the CF naming convention, which means the
expected behavior can't be inferred by the clang static
analyzer.


Canonical link: https://commits.webkit.org/189118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216949 268f45cc-cd09-0410-ab3c-d52691b4dbfc